Fixed the alignment of userdetail

--- a/packages/ui/components/settingsPage/SettingCard.module.css
+++ b/packages/ui/components/settingsPage/SettingCard.module.css
@@ -28,6 +28,10 @@
 
 .userDetails {
   margin-top: auto; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  height : 100%;
   text-align: left;
 }
 
